--- a/index.html
+++ b/index.html
@@ -2,23 +2,13 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/src/favicon.svg" />
+    <link rel="icon" type="image/svg+xml" href="./src/favicon.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Clima</title>
     <link href="https://fonts.googleapis.com/css2?family=K2D:wght@100;500;700&display=swap" rel="stylesheet">
-    <!-- <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css"> -->
   </head>
   <body>
     <div id="root"></div>
-    <script type="module" src="/src/main.jsx"></script>
-
-    <!-- implemtado externo a la app -->
-    <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0-rc.2/js/materialize.min.js"></script> -->
-    <!-- <script>
-      document.addEventListener('DOMContentLoaded', function() {
-          var elementos = document.querySelectorAll('select');
-        M.FormSelect.init(elementos);
-      });
-    </script> -->
+    <script type="module" src="./src/main.jsx"></script>
   </body>
 </html>
